src/test/ui/traits/trait-object-safety.stderr
error[E0038]: the trait `Tr` cannot be made into an object
  --> $DIR/trait-object-safety.rs:15:22
   |
LL |     fn foo();
   |        --- associated function `foo` has no `self` parameter
...
LL |     let _: &dyn Tr = &St;
   |                      ^^^ the trait `Tr` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Tr>` for `&St`
   = note: required by cast to type `&dyn Tr`

error[E0038]: the trait `Tr` cannot be made into an object
  --> $DIR/trait-object-safety.rs:15:12
   |
LL |     fn foo();
   |        --- associated function `foo` has no `self` parameter
...
LL |     let _: &dyn Tr = &St;
   |            ^^^^^^^ the trait `Tr` cannot be made into an object

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
